--- a/Ez_Tabs/style.css
+++ b/Ez_Tabs/style.css
@@ -8,7 +8,7 @@
 .tab-menu li {
   float: left;
   list-style: none;
-  padding: 0 20px;
+
   background: #ebebeb;
   margin-right: 10px;
 }
@@ -22,7 +22,13 @@
   text-transform: uppercase;
   font-weight: bold;
   line-height: 27px;
+  padding: 0 20px;
+  display: block;
   text-decoration: none;
+}
+.tab-menu li a.active {
+  background: #000;
+  color: #fff;
 }
 #tab-content {
   min-height: 300px;
