--- a/Ez_Js_Hover_Ani/style.css
+++ b/Ez_Js_Hover_Ani/style.css
@@ -26,3 +26,51 @@ h1 {
 
 /* MAIN STYLES
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  width: 100%;
+}
+.container a {
+  border-bottom: 2px dashed var(--red);
+  position: relative;
+}
+.container a:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  min-height: 30px;
+  transform: translate(-50%, -50%) scaleX(0);
+  padding: 10px;
+  z-index: -1;
+  transform-origin: 50% 50%;
+  background: var(--white);
+  transition: all 0.3s ease-out;
+}
+.bg {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  transition: all 0.3s ease-out;
+}
+.bg-show .bg {
+  opacity: 1;
+  z-index: 1;
+}
+.container a:hover {
+  z-index: 2;
+  border-bottom-color: transparent;
+  color: var(--red);
+}
+.container a:hover:before {
+  transform: translate(-50%, -50%) scaleX(1);
+}
