--- a/Ez_Waxom/css/default.css
+++ b/Ez_Waxom/css/default.css
@@ -57,7 +57,7 @@ header .logo a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center top;
-  height: 1024px;
+  height: 100vh;
   text-align: center;
   width: 100%;
 }
@@ -77,4 +77,141 @@ header .logo a {
   top: 50%;
   transform: translate(-50%, -50%);
   z-index: 110;
+  color: #fff;
+  width: 590px;
+}
+.slider-list li .contents h3 {
+  font-size: 36px;
+  font-family: "Railway", sans-serif;
+  font-weight: 500;
+  line-height: 1.1;
+}
+.slider-list li .contents h2 {
+  font-size: 52px;
+  font-family: "Railway", sans-serif;
+  font-weight: 800;
+  line-height: 1.3;
+}
+.slider-list li .contents p {
+  width: 98%;
+  margin-bottom: 49px;
+}
+
+.slider .controls a {
+  width: 40px;
+  height: 73px;
+  background: url(../images/sprites.png) no-repeat;
+  text-indent: -9999em;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 120;
+}
+.slider .controls a.prev {
+  background-position: 0 -77px;
+  margin-left: -789px;
+}
+.slider .controls a.next {
+  background-position: -40px -77px;
+  margin-left: 789px;
+}
+
+.slider .pager {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 40px;
+
+  z-index: 150;
+}
+.slider .pager span {
+  width: 11px;
+  height: 11px;
+  background: rgba(255, 255, 255, 0.5);
+  border: 2px solid transparent;
+  float: left;
+  margin-right: 10px;
+  border-radius: 50%;
+  text-indent: -9999em;
+  background-clip: content-box;
+  transition: all 0.5s ease;
+}
+.slider .pager span.cycle-pager-active {
+  border: 2px solid #d3c1ad;
+  background: rgba(255, 255, 255, 0);
+}
+
+.slider-list li.cycle-slide-active .contents * {
+  animation: slideIn 1s forwards ease-out;
+}
+.slider-list li .contents * {
+  transform: translateY(40%);
+  opacity: 0;
+}
+.slider-list li .contents h3 {
+  animation-delay: 1.2s;
+}
+.slider-list li .contents h2 {
+  animation-delay: 1.4s;
+}
+.slider-list li .contents p {
+  animation-delay: 1.6s;
+}
+.slider-list li .contents a {
+  animation-delay: 1.8s;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(40%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+
+/* services */
+.services {
+  padding: 92px 0 80px;
+}
+.service_item {
+  float: left;
+  width: 270px;
+  margin-right: 30px;
+  text-align: center;
+}
+.service_item:last-child {
+  margin-right: 0;
+}
+.service_item .icon {
+  font-size: 36px;
+  color: #555555;
+}
+.service_item h4 {
+  font-size: 22px;
+  font-weight: 500;
+  color: #555555;
+  margin: 26px 0 13px;
+}
+.service_item p {
+  font-size: 14px;
+  font-weight: 300;
+  color: #8c8c8c;
+  margin-bottom: 22px;
+}
+.service_item .status {
+  width: 70px;
+  height: 3px;
+  background: #f1eee9;
+  display: inline-block;
+}
+
+.service_item:hover h4 {
+  color: #c7b299;
+}
+.service_item:hover .status {
+  background: #c7b299;
 }
