--- a/Ez_Waxom/css/default.css
+++ b/Ez_Waxom/css/default.css
@@ -2,7 +2,7 @@
 
 /*  header  */
 header {
-  position: fixed;
+  position: absolute;
   top: 0;
   z-index: 999;
   left: 0;
@@ -83,7 +83,7 @@ header .logo a {
 .slider-list li .contents h3 {
   font-size: 36px;
   font-family: "Railway", sans-serif;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 1.1;
 }
 .slider-list li .contents h2 {
@@ -214,4 +214,128 @@ header .logo a {
 }
 .service_item:hover .status {
   background: #c7b299;
+}
+
+/* realization */
+.realization {
+  background: #fbfaf8;
+  padding-top: 84px;
+  text-align: center;
+}
+.realization img {
+  width: 100%;
+}
+
+/* Text Boxes */
+.text_boxes {
+  padding: 50px 0;
+  background: linear-gradient(to right, #211b19, #4e3427);
+}
+.text_boxes .box_contents {
+  float: left;
+}
+.text_boxes .btn {
+  float: right;
+}
+.text_boxes .box_contents h4 {
+  color: #fff;
+  font-size: 28px;
+}
+.text_boxes .box_contents h4 span {
+  color: #c7b299;
+}
+.text_boxes .box_contents p {
+  color: #615855;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+/* Latest_projects */
+.latest_projects input {
+  display: none;
+}
+.projects_wrap {
+  text-align: center;
+}
+.projects_wrap label {
+  line-height: 30px;
+  border: 1px solid #ebebeb;
+  padding: 0 18px;
+  background: #fff;
+  display: inline-block;
+  border-radius: 3px;
+  margin: 0 3px;
+  font-size: 14px;
+  font-weight: 300;
+  color: #8c8c8c;
+  transition: 0.3s;
+}
+.project_list {
+  margin-top: 40px;
+}
+.projects_wrap input:checked + label {
+  background: #998675;
+  color: #fff;
+  border: 1px solid #998675;
+}
+
+.project_list li {
+  width: 370px;
+  margin: 0 30px 30px 0;
+  float: left;
+}
+.project_list li:nth-child(3n) {
+  margin: 0 0 30px 0;
+}
+.project_list li img {
+  width: 100%;
+}
+
+.project_list li .contents {
+  background: #fbfaf8;
+  padding: 24px 29px;
+}
+.project_list li .contents h4 {
+  font-size: 20px;
+  color: #c7b299;
+  font-weight: 500;
+}
+.project_list li .contents p {
+  font-size: 14px;
+  color: #d1d1d1;
+}
+.project_list li .imgWrap {
+  position: relative;
+}
+.project_list li .hover_contents {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.7);
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  text-align: center;
+  padding-top: 126px;
+  opacity: 0;
+  transition: 0.4s;
+}
+.project_list li .hover_contents a {
+  color: #fff;
+  margin: 0 15px;
+  font-size: 26px;
+}
+.project_list li .hover_contents a:hover {
+  color: #c7b299;
+}
+.project_list li:hover .hover_contents {
+  opacity: 1;
+}
+.project_list li:hover .contents {
+  background: #362f2d;
+}
+.project_list li:hover .contents h4 {
+  color: #fff;
+}
+.project_list li:hover .contents p {
+  color: c7b299;
 }
