--- a/Ez_Waxom/css/default.css
+++ b/Ez_Waxom/css/default.css
@@ -452,3 +452,250 @@ header .logo a {
   opacity: 1;
   pointer-events: auto;
 }
+/* excellent_mobile */
+
+.excellent_mobile {
+  padding-top: 80px;
+  background: #fbfaf8;
+}
+.excellent_mobile img {
+  float: left;
+  margin-left: 50px;
+}
+.excellent_mobile .contents {
+  float: left;
+  width: 670px;
+  margin-top: 115px;
+}
+.excellent_mobile .contents h3,
+.excellent_mobile .contents p {
+  text-align: left;
+  width: 100%;
+}
+.excellent_mobile .contents ul {
+  margin-left: 50px;
+}
+.excellent_mobile .contents ul li {
+  font-size: 16px;
+  font-weight: 300;
+  color: #8c8c8c;
+  margin-bottom: 7px;
+}
+.excellent_mobile .contents ul li span {
+  width: 21px;
+  height: 21px;
+  background: url(../images/sprites.png) no-repeat -402px -89px;
+  display: inline-block;
+  text-indent: -9999em;
+  margin-right: 28px;
+  vertical-align: middle;
+}
+
+/* counters */
+.counters {
+  background: linear-gradient(to right, #211b19, #4e3427);
+  padding: 69px 0 60px;
+  text-align: center;
+}
+.counters ul {
+  display: inline-block;
+}
+.counters ul li {
+  width: 170px;
+  float: left;
+  margin: 0 15px;
+}
+.counters ul li .icon {
+  background: url(../images/sprites.png) no-repeat;
+  height: 44px;
+  width: 44px;
+  display: inline-block;
+  text-indent: -9999em;
+}
+.counters ul li .coffee {
+  width: 48px;
+  background-position: -196px 0;
+}
+.counters ul li .post {
+  width: 44px;
+  background-position: -399px 0;
+}
+.counters ul li .like {
+  width: 44px;
+  background-position: -599px 0;
+}
+.counters ul li .launched {
+  width: 54px;
+  background-position: 100% 0;
+}
+
+.counters ul li h3 {
+  font-size: 48px;
+  margin: 30px 0 20px;
+  color: #fff;
+}
+.counters ul li h4 {
+  font-size: 14px;
+  margin-bottom: 30px;
+  color: #c7b299;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+}
+.counters ul li .bar {
+  width: 30px;
+  height: 2px;
+  background: #fff;
+  display: inline-block;
+}
+
+/* recent posts */
+.recent_posts {
+  padding: 80px 0;
+}
+.posts_list li {
+  width: 370px;
+}
+.recent_img_wrap {
+  position: relative;
+}
+.post_date {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  width: 50px;
+  border-radius: 3px;
+  overflow: hidden;
+  color: #fff;
+  text-align: center;
+  z-index: 2;
+}
+.post_date .date {
+  background: #363636;
+  display: block;
+  line-height: 35px;
+  font-size: 24px;
+  font-weight: 300;
+}
+.post_date .month {
+  background: #252525;
+  line-height: 25px;
+  font-size: 12px;
+  font-weight: 300;
+  display: block;
+}
+.recent_img_wrap .hover_contents {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(17, 17, 17, 0.7);
+  opacity: 0;
+  transition: 0.4;
+}
+.recent_img_wrap .hover_contents span {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 48px;
+  color: #fff;
+}
+.posts_list li:hover .hover_contents {
+  opacity: 1;
+}
+.post_details {
+  border-color: #f8f8f8;
+  border-style: solid;
+  border-width: 0 1px 1px 1px;
+  padding: 25px 30px;
+  background: #fff;
+  transition: 0.2s;
+}
+.post_details h4 {
+  font-weight: 500;
+  font-size: 20px;
+  color: #555;
+}
+.post_details p {
+  font-size: 14px;
+  font-weight: 300;
+  color: #8c8c8c;
+  line-height: 22px;
+  margin: 15px 0;
+}
+.post_details a {
+  font-size: 14px;
+  color: #c7b299;
+  text-decoration: none;
+}
+.post_details a span {
+  display: inline-block;
+  margin-left: 5px;
+}
+.posts_list li:hover .post_details {
+  border-color: transparent;
+  background: #362f2d;
+}
+.posts_list li:hover .post_details h4 {
+  color: #c7b299;
+}
+.posts_list li:hover .post_details p {
+  color: #fff;
+}
+.posts_list li:hover .post_details a {
+  color: #c7b299;
+}
+.posts_list li:hover .post_date .date {
+  background: #c7b299;
+}
+.posts_list li:hover .post_date .month {
+  background: #a48d72;
+}
+.controls {
+  text-align: center;
+  margin-top: 50px;
+}
+.controls a {
+  width: 22px;
+  height: 22px;
+  display: inline-block;
+  background: url(../images/sprites.png) no-repeat;
+  text-indent: -9999em;
+}
+.controls a.bx-prev {
+  background-position: -194px -89px;
+}
+.controls a.bx-next {
+  background-position: -224px -89px;
+}
+.controls a.bx-prev:hover {
+  background-position: -194px -111px;
+}
+.controls a.bx-next:hover {
+  background-position: -224px -111px;
+}
+
+/* partners */
+.partners {
+  height: 489px;
+  background: url(../images/partners_bg.jpg) no-repeat center center;
+  padding-top: 142px;
+  box-sizing: border-box;
+}
+.partners ul li {
+  width: 270px;
+  margin-right: 30px;
+  text-align: center;
+  float: left;
+  line-height: 210px;
+}
+.partners ul li:last-child {
+  margin-right: 0px;
+}
+.partners ul li a {
+  display: block;
+}
+.partners ul li a img {
+  vertical-align: middle;
+}
