waxom mobile finish

--- a/Ez_Waxom/css/default.css
+++ b/Ez_Waxom/css/default.css
@@ -871,9 +871,91 @@ footer p {
     top: 20px;
     right: 30px;
   }
+  .services {
+    padding-bottom: 40px;
+  }
   .service_item {
     width: 22%;
     margin-right: 4%;
+  }
+  .text_boxes {
+    text-align: center;
+  }
+  .text_boxes .box_contents {
+    margin-bottom: 20px;
+  }
+  .text_boxes .box_contents,
+  .text_boxes .btn {
+    float: none;
+  }
+  .latest_projects {
+    padding: 40px 15px;
+  }
+  .project_list li {
+    width: 32%;
+    margin: 0 2% 30px 0;
+  }
+  .video .contents {
+    width: 90%;
+  }
+  .video .contents p {
+    width: 100%;
+  }
+  .excellent_mobile .container {
+    padding: 40px 15px;
+  }
+  .excellent_mobile img {
+    width: 70%;
+    margin: 0 auto;
+    float: none;
+  }
+  .excellent_mobile .contents {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .counters ul {
+    width: 100%;
+    display: block;
+  }
+  .counters ul li {
+    width: 14%;
+    margin: 0 3%;
+  }
+  .recent_posts {
+    padding: 60px 15px;
+  }
+  .partners ul li {
+    width: 23%;
+    margin-right: 2%;
+    line-height: 25vh;
+  }
+  .partners ul li img {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .partners {
+    padding: 80px 0;
+    height: 50vh;
+  }
+  .col-one-forth {
+    width: 23%;
+    margin-right: 2%;
+  }
+  .slider .controls a {
+    left: 0;
+  }
+  .slider .controls a.prev {
+    margin-left: 0;
+    left: 5%;
+  }
+  .slider .controls a.next {
+    margin-left: 0;
+    left: 95%;
+  }
+  .footer_bottom .copy,
+  .footer_bottom .designer {
+    float: none;
+    text-align: center;
   }
 }
 
@@ -881,5 +963,50 @@ footer p {
   .service_item {
     width: 100%;
     margin-right: 0;
+  }
+  .project_list li {
+    width: 100%;
+    margin: 0 0 30px 0;
+  }
+  .partners ul li {
+    width: 48%;
+    margin-right: 2%;
+  }
+  .partners ul li img {
+    width: 60%;
+  }
+  .col-one-forth {
+    width: 100%;
+    float: none;
+    margin-right: 0;
+  }
+
+  .slider-list li .contents h3 {
+    font-size: 6vw;
+  }
+  .slider-list li .contents h2 {
+    font-size: 8vw;
+  }
+  .slider-list li .contents p {
+    font-size: 3vw;
+    width: 80%;
+    margin: 0 auto 49px;
+  }
+  .content_tt {
+    font-size: 5vw;
+  }
+  .counters ul li h3 {
+    font-size: 5vw;
+  }
+  .counters ul li h4 {
+    font-size: 2vw;
+  }
+  .footer_bottom .copy {
+    margin-bottom: 20px;
+  }
+  .footer_bottom .copy,
+  .footer_bottom .designer {
+    float: none;
+    text-align: center;
   }
 }
